--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -2,7 +2,7 @@ Gallery
 <div class="gallery">
   {% for file in site.static_files %}
   {% if file.path contains include.folder %}
-  {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.JPG' or file.extname == '.JPEG' %}
+  {% if file.extname == '.jpg' or file.extname == '.jpeg' or file.extname == '.png' %}
   {% assign filenameparts = file.path | split: "/" %}
   {% assign filename = filenameparts | last | replace: file.extname,"" %}
   <img src="{{ site.url }}{{ file.path | relative_url }}" alt="{{ filename }}" />
